--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -10,3 +10,79 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
 }
+
+.stub {
+  h1, h3 {
+    text-align: center;
+  }
+  h3 {
+    font-weight: lighter;
+  }
+  background-color: #000000;
+  .content-overlay {
+    background: rgba(66, 85, 121, 0.7);
+    height: 100vh;
+    // height: auto;
+    max-height: auto;
+    width: 100%;
+    // padding: 3rem 0;
+  }
+  .panel {
+    margin: 0 3rem;
+    min-width: 220px;
+    .content {
+      background: rgba(255, 255, 255, 0.9);
+      // height: 24rem;
+      margin: 0 auto;
+      max-width: 680px;
+      padding: 2rem;
+      .logo {
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
+}
+
+@media (max-width: 759px) {
+  body {
+    background: url(/assets/v/bgv2.jpg);
+    background-position: top right;
+    background-size: cover;
+  }
+  .video-overlay {
+    display: none;
+  }
+  .content h1, .content h3 {
+    text-align: left;
+  }
+}
+
+.video-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: -1;
+}
+
+.video-overlay amp-video {
+  border: 1px solid red;
+  width: 100%;
+  height: auto;
+  max-height: auto;
+}
+
+// .o2 {
+//   height: 300px;
+//   width: 100%;
+//   background: rgba(240, 140, 240, 0.5);
+// }
+
+//
+// .video-overlay amp-video .i-amphtml-fill-content {
+//   width: 100%;
+//   height: auto;
+//   max-height: none;
+// }
