--- a/_layouts/stub.html
+++ b/_layouts/stub.html
@@ -2,6 +2,7 @@
 <html amp>
 {% include head.html %}
 <body class="stub">
+  <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-KXTHK8B&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
   {{ content }}
 </body>
 
