--- a/_layouts/stub.html
+++ b/_layouts/stub.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html amp>
+<html amp lang="en">
 {% include head.html %}
 <body class="stub">
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-KXTHK8B&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
