--- a/_layouts/stub.html
+++ b/_layouts/stub.html
@@ -3,6 +3,15 @@
 {% include head.html %}
 <body class="stub">
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-KXTHK8B&gtm.url=SOURCE_URL" data-credentials="include"></amp-analytics>
+  <amp-analytics type="metrika">
+    <script type="application/json">
+        {
+            "vars": {
+                "counterId": "66639073"
+            }
+        }
+    </script>
+  </amp-analytics>
   {{ content }}
 </body>
 
