--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+  <meta name="description" content="Signalot – Provider of reliable profitable trading signals">
   <style amp-custom>
     {% include_sass style.scss %}
   </style>
